[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/ui/themes/popup.theme" type="Theme" id=1]
[ext_resource path="res://scripts/StartLANGame.gd" type="Script" id=2]

[node name="StartLANGame" type="ConfirmationDialog"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -195.0
margin_top = 771.0
margin_right = 196.0
margin_bottom = 1236.0
theme = ExtResource( 1 )
window_title = "Start a LAN Game"
dialog_text = "Starting a LAN game allows anyone on your local network to join and play.

Please note that this will NOT work on school Wi-Fi! You must start your own hotspot and host from there, and all players must connect to the hotspot to play.

MacOS and Linux support is experimental."
dialog_hide_on_ok = false
dialog_autowrap = true
script = ExtResource( 2 )

[node name="Options" type="Control" parent="."]
margin_left = 8.0
margin_top = 221.0
margin_right = 383.0
margin_bottom = 419.0

[node name="VBoxContainer" type="VBoxContainer" parent="Options"]
margin_right = 375.0
margin_bottom = 198.0

[node name="Cheats" type="CheckBox" parent="Options/VBoxContainer"]
margin_right = 375.0
margin_bottom = 32.0
text = "Enable Cheats"

[node name="Tween" type="Tween" parent="."]

[connection signal="about_to_show" from="." to="." method="_on_StartLANGame_about_to_show"]
[connection signal="confirmed" from="." to="." method="_on_StartLANGame_confirmed"]
[connection signal="popup_hide" from="." to="." method="_on_StartLANGame_popup_hide"]
